Submission: Guided Capstone Project Report

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -5005,7 +5005,7 @@
     "The ski resort dataset in ski_resort_data.csv was explored to prepare dataset for analysis. The imported csv file was explored for missing data in columns using .isnull() method.\n",
     "A discrepancy was discovered between region and state columns. Used the value_counts() method to count of resorts per state and region. Merging state and resort name columns produced an unique state and resort combination was found. \n",
     "\n",
-    "Prices between weekday and weekend tickets were compared for all states using box plot and found a large range for california, colorado, Nevada, and Utah. Summarized the numeric data with histograms. Found and corrected an incorrect value for skiable terrain column for Silverton Mountain resort. Years open column was also fixed for a incorrect data 2019 value. Rows with missing ticket prices for both the weekday and weekend were dropped completely from the dataset.\n",
+    "Prices between weekday and weekend tickets were compared for all states using box plot and found a large range for California, Colorado, Nevada, and Utah. Summarized the numeric data with histograms. Found and corrected an incorrect value for skiable terrain column for Silverton Mountain resort. Years open column was also fixed for a incorrect data 2019 value. Rows with missing ticket prices for both the weekday and weekend were dropped completely from the dataset.\n",
     "\n",
     "A new data frame was created by reading a table from wikipedia and compared sets with the states in the resort dataset. From the new wikipedia state data frame the state population and state area to the resort dataframe. The cleaned dataset to a new .csv file in preparation for analysis. "
    ]
